# bcb-sgs-sql

./: .gitignore  README.md  pyproject.toml
src/bcb_sgs_sql/: __init__.py  cli.py  config.py  database.py  loader.py  models.py  plugin_manager.py  runner.py  scaffold.py  sgs.py  storage.py  toml_runner.py  transform_runner.py  validator.py
tests/: conftest.py  test_config.py  test_loader_mapping.py  test_models_ddl.py  test_sgs.py  test_soft_versioning.py  test_storage.py  test_themes_metadata.py  test_validator.py
