[project]
name = "bcb-sgs-sql"
version = "0.1.1"
description = "Séries temporais do BCB SGS em PostgreSQL"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "bcb",
    "sgs",
    "series-temporais",
    "postgresql",
    "brazil",
    "open-data",
    "etl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "bcb-sgs-fetcher @ git+https://github.com/Quantilica/bcb-sgs-fetcher.git@v0.4.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
    "orjson>=3.11.7",
    "platformdirs>=4.9.6",
    "typer>=0.24.1",
    "rich>=13.0",
]

[project.scripts]
bcb-sgs-sql = "bcb_sgs_sql.cli:main"

[project.urls]
Homepage = "https://github.com/Quantilica/bcb-sgs-sql"
Repository = "https://github.com/Quantilica/bcb-sgs-sql"
Issues = "https://github.com/Quantilica/bcb-sgs-sql/issues"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bcb_sgs_sql"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.per-file-ignores]
# Typer uses calls (typer.Option/Argument) in argument defaults by design.
"src/bcb_sgs_sql/cli.py" = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
